# QBridge

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
QBridge/: README.md  __init__.py  base.py  factory.py  rabbitmq_client.py  task_manager  task_manager.py
tests/: .env.test.example  test_rabbitmq_client.py
