[project]
name = "qbridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pika>=1.3.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pika-stubs>=0.1.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.5",
    "types-setuptools>=78.1.0.20250329",
]
